Update component ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -17,7 +17,7 @@
             "prototype": "digit/ui/checkbox.reel",
             "properties": {
                 "element": {"#": "checkbox"},
-                "checked": true,
+                "checked": false,
                 "value": "isLoggedIn"
             },
             "bindings": {
