Update component ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -21,7 +21,7 @@
                 "value": "isLoggedIn"
             },
             "bindings": {
-                "enabled": {"<-": "@user.isLoggedIn"}
+                "checked": {"<-": "@user.isLoggedIn"}
             }
         },
         "user": {
