Update component ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -18,7 +18,8 @@
             "properties": {
                 "element": {"#": "checkbox"},
                 "checked": false,
-                "value": "isLoggedIn"
+                "enabled": true,
+                "value": "test component"
             },
             "bindings": {
                 "checked": {"<-": "@user.isLoggedIn"}
