Update component ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -40,6 +40,9 @@
             "prototype": "ui/user.reel",
             "properties": {
                 "element": {"#": "user"}
+            },
+            "bindings": {
+                "isLoggedIn": {"<->": "@checkbox.checked"}
             }
         }
     }
