--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -21,7 +21,7 @@
                 "label": "isLoggedIn"
             },
             "bindings": {
-                "enabled": {"<-": "@user.isCompleted"}
+                "enabled": {"<-": "@user.checked"}
             }
         },
         "checkbox": {
@@ -33,7 +33,7 @@
                 "value": "test component"
             },
             "bindings": {
-                "checked": {"<->": "@user.isCompleted"}
+                "checked": {"<->": "@user.checked"}
             }
         },
         "user": {
