Update component ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -21,7 +21,7 @@
                 "label": "isLoggedIn"
             },
             "bindings": {
-                "active": {"<-": "@user.checked"}
+                "enabled": {"<-": "@user.checked"}
             }
         },
         "checkbox": {
